[package]
name = "inline"
version = "0.1.0"
edition = "2021"
description = "inline — a tiny, self-hostable queue system with live updates"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
qrcode = "0.14"
nanoid = "0.4"
dotenvy = "0.15"

# Optional database backends. OFF by default, so the default build pulls ZERO
# extra dependencies and stays tiny. Enable one at build time, e.g.:
#   cargo build --release --features sqlite
#   cargo build --release --features postgres
#   cargo build --release --features mongo
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "any"], optional = true }
mongodb = { version = "3", optional = true }

[features]
default = []
sqlite = ["dep:sqlx", "sqlx/sqlite"]
postgres = ["dep:sqlx", "sqlx/postgres", "sqlx/tls-rustls"]
mongo = ["dep:mongodb"]

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
